# jazzplusplus

./: AUTHORS  ChangeLog  Info.plist.in  LinuxInstall.txt  Makefile.am  README  README.md  bootstrap  configure.ac  dialogs.txt  wxwin2_port.txt
codeblocks/: Jazz++.cbp  config.h
codeblocks-mingw/: Jazz++.workspace  JazzPlusPlus.cbp
conf/: Makefile.am  README  Roland-TD-20-DrumSets.jzi  ctrlnam.jzi  e26.jzi  e26voice.jzi  gm.jzi  gmdrmnam.jzi  gmdrmset.jzi  gmvoices.jzi  gs.jzi  gsdrmset.jzi  gsvoices.jzi  jazz.cfg  jazz.mid  jv1000.jzi  sc88pdrm.jzi  sc88pro.jzi  sc88pvoi.jzi  xg.jzi  xgdrmnam.jzi  xgdrmset.jzi  xgvoices.jzi
contrib/: vms-v26b.patch
contrib/CakeWalk-Converter/: Makefile  jazzconvert.cpp  qs_7.ins
contrib/borland/: jazz-src-4.1.3-bcc32-changes.txt  makeb32.env  makefile.b32  readme.txt  src-makefile.b32  wxmsw.env
m4/: acinclude.m4
midinetd/: Makefile  main.c  midi_p.x  midinetd.h  procs.c  reader.c
portmidi/: portmidi-VC8.sln  portmidi-VC9.sln
portmidi/pm_common/: pminternal.h  pmutil.c  portmidi.c  portmidi.h
portmidi/pm_linux/: Makefile  README_LINUX.txt  pmlinuxalsa.c
portmidi/pm_mac/: Makefile.osx
portmidi/pm_test/: latency-VC8.vcproj  latency-VC9.vcproj  midithread-VC8.vcproj  midithread-VC9.vcproj  midithru-VC8.vcproj  midithru-VC9.vcproj  mm-VC8.vcproj  mm-VC9.vcproj  qtest-VC8.vcproj  qtest-VC9.vcproj  sysex-VC8.vcproj  sysex-VC9.vcproj  sysex.c  test-VC8.vcproj  test-VC9.vcproj  test.c
portmidi/pm_win/: README_WIN.txt  copy-dll.bat  pm_dll-VC8.vcproj  pm_dll-VC9.vcproj  pm_dll.dsp  pmwin.c  pmwinmm.c  portmidi-VC10.vcxproj  portmidi-VC11.vcxproj  portmidi-VC12.vcxproj  portmidi-VC14.vcxproj  portmidi-VC15.vcxproj  portmidi-VC16.vcxproj  portmidi-VC8.vcproj  portmidi-VC9.vcproj  portmidi-mingw.cbp
portmidi/porttime/: porttime-VC10.vcxproj  porttime-VC11.vcxproj  porttime-VC12.vcxproj  porttime-VC14.vcxproj  porttime-VC15.vcxproj  porttime-VC16.vcxproj  porttime-VC8.vcproj  porttime-VC9.vcproj  porttime-mingw.cbp  porttime.h  ptwinmm.c
song/: audiodem.mid  audiodem.spl  demo.har  demo.rhy  demo1.mid  demo2.mid  demo3.mid  demo4.mid  drum.syn  rrg1.mid  rrg1.rhy  rrg2.mid  rrg2.rhy  tekk.rhy
song/arpeggio/: arpeggio1.mid  arpeggio2.mid  cc1.apg  notes.apg  pan.apg
song/rmg/: rmg1.har  rmg1.mid  rmg1.rhy  rmg1bass.mel  rmg1chord.mel  rmg1solo.mel  rmg2.har  rmg2.mid  rmg2.rhy  rmg2bass.mel  rmg2chord.mel  rmg2solo.mel
song/shuffle/: shuffle0.mid  shuffle1.mid  shuffle2.mid
src/: AboutDialog.cpp  AboutDialog.h  AlsaDriver.cpp  AlsaDriver.h  AlsaPlayer.cpp  AlsaPlayer.h  AlsaThru.cpp  AlsaThru.h  ArrayControl.cpp  ArrayControl.h  AsciiMidiFile.cpp  AsciiMidiFile.h  Audio.cpp  Audio.h  AudioDriver.cpp  AudioDriver.h  BitSet.h  Command.cpp  Command.h  CommandUtilities.h  Configuration.cpp  Configuration.h  ControlEdit.cpp  ControlEdit.h  Dialogs.cpp  Dialogs.h  DrumEnums.h  DrumUtilities.cpp  DrumUtilities.h  DynamicArray.h  ErrorMessage.cpp  ErrorMessage.h  EventFrame.cpp  EventFrame.h  EventWindow.cpp  EventWindow.h  Events.cpp  Events.h  FileSelector.cpp  FileSelector.h  (+115 more)
src/Bitmaps/: JazzLogo.xpm  accept.xpm  alea.xpm  analyze.xpm  cancel.xpm  cut.xpm  cutpaste.xpm  delchord.xpm  delete.xpm  dialog.xpm  evnts.xpm  harscale.xpm  haunsch.xpm  help.xpm  ionscale.xpm  length.xpm  majscale.xpm  melscale.xpm  metro.xpm  mixer.xpm  new.xpm  note16.xpm  note163.xpm  note8.xpm  note83.xpm  open.xpm  panic.xpm  piano.xpm  pianowin.xpm  play.xpm  playloop.xpm  quantize.xpm  record.xpm  redo.xpm  repl.xpm  rrgadd.xpm  rrgdel.xpm  rrgdown.xpm  rrggen.xpm  rrgup.xpm  (+17 more)
src/DeprecatedWx/: prop.cpp  prop.h  propform.cpp  propform.h  proplist.cpp  proplist.h
src/Dialogs/: AudioSettingsDialog.cpp  AudioSettingsDialog.h  CleanupDialog.cpp  CleanupDialog.h  ControllerDialog.cpp  ControllerDialog.h  DeleteDialog.cpp  DeleteDialog.h  EndOfTrackDialog.cpp  EndOfTrackDialog.h  FilterDialog.cpp  FilterDialog.h  IntegerEdit.cpp  IntegerEdit.h  KeyOnDialog.cpp  KeyOnDialog.h  LengthDialog.cpp  LengthDialog.h  MeterChangeDialog.cpp  MeterChangeDialog.h  MetronomeSettingsDialog.cpp  MetronomeSettingsDialog.h  MidiChannelDialog.cpp  MidiChannelDialog.h  PitchWheelDialog.cpp  PitchWheelDialog.h  ProgramChangeDialog.cpp  ProgramChangeDialog.h  QuantizeDialog.cpp  QuantizeDialog.h  SamplesDialog.cpp  SamplesDialog.h  SearchAndReplaceDialog.cpp  SearchAndReplaceDialog.h  SetTempoDialog.cpp  SetTempoDialog.h  ShiftDialog.cpp  ShiftDialog.h  SnapDialog.cpp  SnapDialog.h  (+26 more)
src/HelpFiles/: Makefile  Makefile.am  copyright.txt  jazz.hpj  jazz.tex  tex2rtf.ini  texhelp.sty
src/HelpFiles/images/: Makefile.am
src/JazzPlusPlusResources/: JazzPlusPlusResources.tpl
src/JazzPlusPlusVersion/: JazzPlusPlusVersion.h  JazzPlusPlusVersion.tpl  Versions.txt
src/ShellScripts/: CreateResourceFile.sh  CreateVersion.sh
src/commands/: copyCommand.cpp  copyCommand.h
src/mswin/: WindowsAudioInterface.cpp  WindowsAudioInterface.h  WindowsConsole.cpp  WindowsConsole.h  WindowsMidiInterface.cpp  WindowsMidiInterface.h  WindowsPlayer.cpp  WindowsPlayer.h  config.h  jazz.rc
vc12/: JazzPlusPlus-VC12.sln  JazzPlusPlus-VC12.vcxproj  JazzPlusPlus-VC12.vcxproj.filters
vc14/: JazzPlusPlus-VC14.sln  JazzPlusPlus-VC14.vcxproj  JazzPlusPlus-VC14.vcxproj.filters
vc15/: JazzPlusPlus-VC15.sln  JazzPlusPlus-VC15.vcxproj  JazzPlusPlus-VC15.vcxproj.filters
vc16/: JazzPlusPlus-VC16.sln  JazzPlusPlus-VC16.vcxproj
