# This file specifies Jazz++ data files to install.  The default location on
# a Linux box is /usr/local/share/Jazz++, which is the gnu dictated place for
# such files.  jazz.cfg could be tailored after the configure options (make a
# jazz.cfg.in and use var substitution).
pkgdata_DATA = jazz.mid \
jazz.cfg \
ctrlnam.jzi \
README \
e26voice.jzi \
e26.jzi \
gmdrmnam.jzi \
gm.jzi \
gmdrmset.jzi \
gmvoices.jzi \
gs.jzi \
gsdrmset.jzi \
gsvoices.jzi \
jazz.cfg \
jv1000.jzi \
sc88pdrm.jzi \
sc88pro.jzi \
sc88pvoi.jzi \
xg.jzi \
xgdrmnam.jzi \
xgdrmset.jzi \
xgvoices.jzi 

EXTRA_DIST = jazz.mid \
jazz.cfg \
ctrlnam.jzi \
README \
e26voice.jzi \
e26.jzi \
gmdrmnam.jzi \
gm.jzi \
gmdrmset.jzi \
gmvoices.jzi \
gs.jzi \
gsdrmset.jzi \
gsvoices.jzi \
jazz.cfg \
jv1000.jzi \
sc88pdrm.jzi \
sc88pro.jzi \
sc88pvoi.jzi \
xg.jzi \
xgdrmnam.jzi \
xgdrmset.jzi \
xgvoices.jzi
